# Engine

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
Archive/: CMakeLists_AppDLL.txt  CMakeLists_EngineDLL.txt
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: FragmentSrc.txt  TextureFragment.txt  TextureVertex.txt  VertexSrc.txt
Engine/src/: Engine.def  Engine.h  Enpch.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Base.h  DeltaTime.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Engine/src/Engine/Debug/: Instrumentor.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RenderingContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Platform/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/: App.cpp  App2D.cpp  App2D.h
